[package]
name = "erc20-holders"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.33", features = ["full"] }
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive", "env"] }
csv-async = { version = "1.3.1", features = ["tokio"] }
futures = "0.3.30"
indicatif = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
